# seedance2.0_api_web_interface_Lite

./: .env.example  .gitignore  README.md  README_CN.md  README_EN.md  database.sql  main.py  pyproject.toml
app/: config.py  dailylogger.py  database.py  oss_client.py  schemas.py  task_worker.py  thumbnail_utils.py  volcano_api.py
app/routers/: __init__.py  config.py  conversations.py  media.py  pages.py  tasks.py
app/static/css/: style.css
app/static/js/: app.js
app/static/js/pages/: auth.js  conversation.js  generator.js  history.js  media.js
app/static/js/pages/generator/: files.js  media_processor.js  mentions.js  tasks.js  ui.js
app/template/: index.html
app/template/pages/: generator_view.html  history_view.html  media_view.html
data/: app.db
